# gift-wishlist-backend

./: .flake8  .gitignore  README.md  alembic.ini  black-format.sh  check-all.sh  check-black.sh  check-flake8.sh  check-mypy.sh  check-pylint.sh  create-pycharm-venv.sh  docker-compose.yml  main.py  mypy.ini  pyproject.toml  requirements.txt  run-dev-server.sh  run-tests.sh  settings.py  setup-local.sh
.github/workflows/: ci.yml  coverage.yml
alembic/: env.py
alembic/versions/: 21b0ee7f2563_add_wishlist_item.py  6cd70f62a2ba_add_user_table.py  dfac57b9426f_link_user_to_wishlistitem.py
app/: main.py  utils.py
app/api/: api.py  deps.py
app/api/endpoints/: login.py  users.py  wishlist.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  crud_user.py  crud_wishlist.py
app/database/: check-migrations.py  check_migrations.py  create_super_user.py  create_superuser.py  db.py  utils.py
app/models/: __init__.py  user.py  wishlist.py
app/schemas/: __init__.py  user.py  wishlist.py
app/tests/: conftest.py  db_utils.py
app/tests/api/: conftest.py  utils.py
app/tests/api/endpoints/: test_login.py  test_users.py  test_wishlist.py
app/tests/models/: test_user.py  test_wishlist.py
app/tests/routers/: test_playground.py
app/wishlist/: models.py  routes.py  schemas.py
database/: check-migrations.py  create_db.py  db.py  todo.txt
dev-scripts/: check-all.sh  check-black.sh  check-flake8.sh  check-mypy.sh  check-pylint.sh  format-black.sh  run-coverage.sh  run-tests.sh
gift_wishlist_backend/: README.md
routers/: playground.py
scripts/: check-all.sh  check-black.sh  check-flake8.sh  check-isort.sh  check-mypy.sh  check-pylint.sh  create-environment-variables.sh  create-super-user.sh  create-superuser.sh  format-black.sh  format-isort.sh  run-coverage.sh  run-dev-server.sh  run-tests.sh
setup/samples/: sample-local.env
tests/: conftest.py
tests/wishlist/: test_routes.py
wishlist/: crud.py  models.py  routes.py  schemas.py
