[tool.poetry]
name = "gift-wishlist-backend"
version = "0.1.0"
description = ""
authors = ["Matthew Holmes <matt_holmes123@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.2"}
SQLAlchemy = "^1.3.22"
alembic = "^1.4.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = "^5.3.1"
mypy = "^0.790"
flake8 = "^3.8.4"
pylint = "^2.6.0"
pytest = "^6.2.1"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"
