[tool.poetry]
name = "gift-wishlist-backend"
version = "0.1.0"
description = "Rest API for wishlist application"
authors = ["Matthew Holmes <matt_holmes123@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.2"}
SQLAlchemy = "^1.3.22"
alembic = "^1.4.3"
pydantic = {extras = ["email"], version = "^1.7.3"}
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = {extras = ["toml"], version = "^5.3.1"}
mypy = "^0.790"
flake8 = "^3.8.4"
pytest = "^6.2.1"
requests = "^2.25.1"
# TODO: Resolve how to add this as a production dependency
# Read this: https://python-poetry.org/docs/pyproject/#extras
psycopg2-binary = "^2.8.6"
isort = "^5.7.0"

[tool.poetry.scripts]
check-migrations = "app.database.check_migrations:main"
create-superuser = "app.database.create_superuser:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# https://docs.pytest.org/en/stable/customize.html#pyproject-toml
[tool.pytest.ini_options]
testpaths = [
    "app/tests",
]
addopts = "--maxfail=2 -rf"

# https://coverage.readthedocs.io/en/coverage-5.3/config.html?highlight=pyproject#configuration-reference
[tool.coverage.run]
source = [
    "app/api/",
    "app/core/",
    "app/crud/",
    "app/database/",
    "app/models/",
    "app/routers/",
    "app/schemas/",
    "app/main.py",
]
omit = [
    "app/database/check_migrations.py", # called when running dev server.
    "app/database/create_superuser.py",
]

[tool.coverage.report]
precision = 2
show_missing = true

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/profiles/
profile = "black"
